tests/neg/i8427.scala
@SerialVersionUID(1L) // error
trait T

object Test {
  var t: T = _
  def main(args: Array[String]) = println("hi")
}
